--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <span class="ml-3 text-xl">FE MCQ</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-        <a class="mr-5 hover:text-gray-900"><a href="AllCalculator.html">Calculator</a></a>
+        <Button><a class="mr-5 hover:text-gray-900"><a href="AllCalculator.html">Calculator</a></a></Button>
         <a class="mr-5 hover:text-gray-900"><a href="MiddlePage.html">MCQ</a></a>
                    </nav>
       <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"><a href="https://youtube.com/channel/UCEbqp9LojxYscgNbYv7lkfA">Learn</a></a>
