--- a/cuboid2.html
+++ b/cuboid2.html
@@ -99,7 +99,7 @@ var n=/^[0-9]+$/;
 </div>
 	<div>
 	<figure>
-		<img src="figure.png"  height=400px width=400px  class="fig py-5 px-5">
+		<img src="figure-2.png"  height=400px width=400px  class="fig py-5 px-5">
 	</figure>
 	</div>
 </div>
