--- a/cone2.html
+++ b/cone2.html
@@ -103,7 +103,7 @@ var n=/^[0-9]+$/;
 </div>
 	<div>
 	<figure>
-		<img src="figure.png"  height=400px width=450px  class="fig py-5 px-5">
+		<img src="figure-1.png"  height=400px width=450px  class="fig py-5 px-5">
 	</figure>
 	</div>
 </div>
